--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -16,13 +16,11 @@ jobs:
     secrets:
       NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
 
-  release-thunderstore:
+  build-thunderstore:
     needs: build
-    uses: xoxfaby/actions/.github/workflows/thunderstore.yml@main
+    uses: xoxfaby/actions/.github/workflows/tcli-build.yml@main
     with:
       version: ${{ needs.build.outputs.version }}
-    secrets:
-      THUNDERSTORE_TOKEN: ${{ secrets.THUNDERSTORE_TOKEN }}
 
   release-github:
     needs: release-thunderstore
